# TAI_Proj1

./: .gitignore  README.md
example/: quim.txt  smalltext.txt
extra/: morse_code.cpp
src/: CMakeLists.txt  Makefile  fcm.cpp  fcm.hpp  generator.cpp
